# hydra

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASING.md  deny.toml  hydra.code-workspace  justfile  release.toml
.github/: CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  (+6 more)
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine-wds/: Cargo.toml  README.md
crates/engine-wds/benches/: solver.rs
crates/engine-wds/src/: lib.rs  test_support.rs
crates/engine-wds/src/analysis/: artifact.rs  binning.rs  demand_reliability.rs  mod.rs  service_compliance.rs  spec.md
crates/engine-wds/src/hydraulics/: demand.rs  diagnostics.rs  headloss.rs  pump.rs  shared.rs  solve.rs  sparse.rs  spec.md  valve.rs
crates/engine-wds/src/io/: digest.rs  inp_reader.rs  inp_writer.rs  mod.rs  out_reader.rs  out_writer.rs  rpt_writer.rs  units.rs
crates/engine-wds/src/model/: mod.rs  network.rs  spec.md  state.rs  validation.rs
crates/engine-wds/src/quality/: mixing.rs  mod.rs  reactions.rs  shared.rs  spec.md  transport.rs
crates/engine-wds/src/simulation/: engine.rs  lifecycle.rs  mutation.rs  results.rs  spec.md  writable.rs
crates/engine-wds/src/simulation/accounting/: energy.rs  flow_balance.rs  mod.rs
crates/engine-wds/src/simulation/controls/: mod.rs  premises.rs  simple.rs
crates/engine-wds/src/simulation/timestep/: mod.rs  schedule.rs  tank.rs
crates/engine-wds/tests/: benchmark_snapshots.rs
crates/engine/benches/: solver.rs
crates/engine/src/: lib.rs
crates/engine/src/analysis/: binning.rs  errors.rs  spec.md
crates/engine/src/hydraulics/: assembly.rs  demand.rs  mod.rs  pump.rs  solve.rs  solve_tests.rs  sparse_order.rs  valve.rs
crates/engine/src/io/: analysis_io.rs  inp_reader.rs  inp_writer.rs  mod.rs  out_reader.rs  out_writer.rs  rpt_writer.rs  units.rs
crates/engine/src/model/: network.rs  validation.rs
crates/engine/src/quality/: mixing.rs  mod.rs  quality_tests.rs  spec.md  test_support.rs
crates/engine/src/simulation/: engine.rs  estimator.rs  mod.rs  spec.md  types.rs  writable.rs
crates/engine/src/simulation/accounting/: energy.rs
crates/engine/src/simulation/controls/: mod.rs  premises.rs  rules.rs  simple.rs
crates/engine/src/simulation/timestep/: mod.rs  tank.rs
crates/gui/: Cargo.toml  README.md  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/frontend/: biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/gui/frontend/public/: crs-catalog.json
crates/gui/frontend/src/: App.tsx  AppContext.tsx  app.css  main.tsx  perfTrace.ts  projectConfig.test.ts  projectConfig.ts  shortcuts.ts  types.test.ts  units.test.ts  units.ts
crates/gui/frontend/src/canvas/: Annotations.tsx  Basemap.tsx  FlowPathLayer.test.ts  FlowPathLayer.ts  Legend.tsx  MapCanvas.tsx  Timeline.tsx  colors.ts  compare.test.ts  compare.ts  coords.test.ts  coords.ts  layers-context.tsx  period-context.tsx  schematicLayout.test.ts  schematicLayout.ts  selection-context.tsx  status-context.tsx  types.ts
crates/gui/frontend/src/canvas/MapCanvas/: colorUtils.test.ts  colorUtils.ts  geoUtils.ts
crates/gui/frontend/src/components/editors/: ControlsEditor.tsx  CrossSectionEditor.tsx  CurveEditor.tsx  PatternEditor.tsx  SimulationSettings.tsx  SubcatchmentsEditor.tsx
crates/gui/frontend/src/components/editors/SimulationSettings/: FormControls.tsx
crates/gui/frontend/src/components/layout/: ActivityBar.tsx  ScenarioStrip.tsx  SecondaryRail.tsx  StatusBar.tsx  TopBar.tsx
crates/gui/frontend/src/components/layout/TopBar/: HistoryButton.tsx
crates/gui/frontend/src/components/modals/: CommandPalette.test.ts  CommandPalette.tsx  CreateLinkModal.tsx  CreateNodeModal.tsx  CrsModal.tsx  DeleteConfirmModal.tsx  DeleteProjectModal.tsx  InpDiffModal.tsx  MapExhibitModal.tsx  MapExhibitPreview.tsx  NewProjectWizard.tsx  RunModal.tsx  ScenariosModal.tsx  ShortcutCard.tsx
crates/gui/frontend/src/components/modals/RunModal/: helpers.tsx
crates/gui/frontend/src/components/panels/: ElementInspector.tsx  IssuesPanel.tsx  NetworkInspectorHome.tsx  ScenariosPanel.tsx  TaskTray.tsx
crates/gui/frontend/src/components/panels/ElementInspector/: ConnectedElements.tsx  InspectorHeader.tsx  LinkBody.tsx  NodeBody.tsx  ResultsCards.tsx  TimeSeriesCard.tsx  primitives.tsx  seriesCache.test.ts  seriesCache.ts
crates/gui/frontend/src/components/panels/ScenariosPanel/: Rows.tsx  shared.ts
crates/gui/frontend/src/components/panels/TaskTray/: RunningCard.tsx  SettledRows.tsx
crates/gui/frontend/src/components/ui/: Card.tsx  ErrorBoundary.tsx  MetricChip.tsx  ModalBackdrop.tsx  NavButton.tsx  NetworkThumbnail.tsx  PrimaryButton.tsx  SectionHeader.tsx  SectionLabel.tsx  SplitActionButton.tsx  TabButton.tsx  Toast.tsx  Toggle.tsx  TooltipPortal.tsx  WarningRow.tsx
crates/gui/frontend/src/hooks/: DraftContext.tsx  NetworkDataContext.test.ts  NetworkDataContext.tsx  NetworkVersionContext.test.ts  NetworkVersionContext.tsx  editors.ts  exhibits.ts  index.test.ts  index.ts  ipc.ts  issues.test.ts  issues.ts  network.test.ts  network.ts  projects.ts  queue.ts  results.test.ts  results.ts  scenarios.ts  simulation.ts  undoStack.test.ts  undoStack.ts  useLatestRelease.ts  useReducedMotion.ts  useUndoRedo.ts
crates/gui/frontend/src/pages/: HomePage.tsx  SettingsPage.tsx
crates/gui/frontend/src/pages/ProjectsPage/: ContextMenu.tsx  index.test.ts  index.tsx
crates/gui/frontend/src/pages/project/: AnalysisPanel.tsx  AnalysisView.tsx  CanvasView.tsx  NetworkEditor.tsx  OverviewView.tsx  ProjectPage.tsx
crates/gui/frontend/src/types/: colors.ts  index.ts  network.ts  scenario.ts  task.ts  ui.ts
crates/gui/icons/: icon.icns
crates/gui/src/: commands.rs  main.rs  meta.rs
crates/gui/src/commands/: binary_codec.rs  mutations.rs  network_dto.rs  projects.rs  results.rs  run_queue.rs  sim_params.rs  simulation.rs  test_fixtures.rs
crates/hydra/: Cargo.toml
crates/hydra/src/: lib.rs
(+191 files in other folders)
