[workspace]
members = [
    "crates/engine-wds",
    "crates/sdk",
    "crates/cli",
    "crates/gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = ["Matthew Downs <matthew@neer.ai>"]
license = "AGPL-3.0-only"
repository = "https://github.com/neeraip/hydra"
homepage = "https://github.com/neeraip/hydra"
documentation = "https://github.com/neeraip/hydra"


# Optimise the core library even in dev/test builds so that benchmark parity
# tests (and any other integration test that exercises the solver) run at
# near-release speed without requiring `--release`.
[profile.dev.package.hydra-engine-wds]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
