[workspace]
members = [
    "crates/engine-wds",
    "crates/sdk",
    "crates/cli",
    "crates/gui",
]
resolver = "2"

[workspace.package]
version = "1.0.3"
edition = "2021"
rust-version = "1.95"
authors = ["Matthew Downs <matthew@neer.ai>"]
license = "AGPL-3.0-only"
repository = "https://github.com/neeraip/hydra"
homepage = "https://github.com/neeraip/hydra"
documentation = "https://neeraip.github.io/hydra/"


# Optimise the engine even in dev/test builds so that the test suite — and any
# test that exercises the solver — runs at near-release speed without
# requiring `--release`.
[profile.dev.package.hydra-engine-wds]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
