[package]
name = "hydra-cli"
version = "1.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI for Hydra — reads network descriptions from files, writes results to files"
readme = "README.md"
keywords = ["epanet", "water", "hydraulics", "simulation", "cli"]
categories = ["science", "simulation", "command-line-utilities"]

[[bin]]
name = "hydra"
path = "src/main.rs"

[dependencies]
hydra = { package = "hydra-sdk", path = "../sdk", version = "1.0.3" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
