[package]
name = "hydra-cli"
version = "1.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI for Hydra — reads network descriptions from files, writes results to files"
readme = "README.md"
keywords = ["epanet", "water", "hydraulics", "simulation", "cli"]
categories = ["science", "simulation", "command-line-utilities"]

[[bin]]
name = "hydra"
path = "src/main.rs"

[dependencies]
hydra = { package = "hydra-sdk", path = "../sdk", version = "1.0.3" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"

# Applies when hydra-cli is built standalone (e.g. `cargo install hydra-cli`
# from crates.io), where this manifest becomes the build root and the
# workspace root's [profile.release] is unavailable. Ignored (with a benign
# warning) when built as part of the hydra workspace, since the workspace
# root profile already applies there.
[profile.release]
lto = "fat"
codegen-units = 1
