[package]
name = "hydra-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Engine-agnostic geographic primitives for Hydra"

[dependencies]
serde = { version = "1", features = ["derive"] }
