[package]
name = "hydra-engine-wds"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Hydra water distribution engine — data model, hydraulic solver, quality engine, session API, analytics"
readme = "README.md"
keywords = ["epanet", "water", "hydraulics", "simulation", "network"]
categories = ["science", "simulation"]

[features]
test-support = []

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
hydra-engine-wds = { path = ".", features = ["test-support"] }
pretty_assertions = "1"
rstest = "0.23"

[[bench]]
name = "solver"
harness = false
