[package]
name = "hydra-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Hydra GUI — desktop application"

[[bin]]
name = "hydra-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hydra = { package = "hydra-sdk", path = "../hydra" }
tauri-plugin-opener = "2"

[dev-dependencies]
tempfile = "3"
