[package]
name = "hydra-gui"
version = "1.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Hydra GUI — desktop application"

[[bin]]
name = "hydra-gui"
path = "src/main.rs"

[features]
# Selects embedded production assets instead of the dev-server URL: tauri
# sets `dev = !custom-protocol` at compile time, so a release binary built
# WITHOUT this feature renders a white window trying to load devUrl.
# `cargo tauri build` enables it automatically; `just release` passes it
# explicitly. DO NOT REMOVE.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
hydra = { package = "hydra-sdk", path = "../sdk" }
tauri-plugin-opener = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
