[package]
name = "hydra-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Water distribution network simulator — EPANET-compatible extended-period simulation"
keywords = ["epanet", "water", "hydraulics", "simulation", "network"]
categories = ["science", "simulation"]
publish = true

[dependencies]
hydra-engine = { path = "../engine" }
